Add file overwrite prompt when saving a file

BUG: 420528
FIXED-IN: 20.08.0